hphp/test/slow/lang/invariant_cb.php.expectf
array(2) {
  [0]=>
  string(1) "a"
  [1]=>
  string(1) "b"
}

Fatal error: Uncaught exception 'HH\InvariantException' with message 'a' in %s/test/slow/lang/invariant_cb.php:6
Stack trace:
#0 %s/test/slow/lang/invariant_cb.php(6): HH\invariant_violation()
#1 {main}
